# Load-Balancer

./: README.md  emailVal.rs  main.go  main_test.go
Go/Consistent-hashing/: main.go
Go/Least Time/: main.go
Go/Round Robin/: main.go
Rust/Consistent-hashing/: main.rs
Rust/Least Time/src/: lib.rs  main.rs
Rust/Round Robin/: Cargo.toml
Rust/Round Robin/src/: lib.rs  main.rs
