[package]
name = "load-balancer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "load-balancer"
path = "src/main.rs"

[lib]
name = "load_balancer"
path = "src/lib.rs"

[dependencies]
tokio              = { version = "1",    features = ["full"] }
axum               = "0.6"
hyper              = { version = "0.14", features = ["full"] }
reqwest            = { version = "0.11", default-features = false, features = ["rustls-tls"] }
async-trait        = "0.1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
